fix: fix a z-index bug

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1111,11 +1111,11 @@ ul.search-type li input:focus+label {
 }
 
 #page-wrapper {
-    position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
+    z-index: 1;
 }
 
 #btn {
